# mcp-demo

./: .gitignore  README.md  pyproject.toml  tasks.csv
client/: client.py  server.json
server/: tasklist.py
